...
        android:layout_height="wrap_content"
        android:id="@+id/textView123"
        android:textSize="20px" android:paddingTop="10dip" android:paddingBottom="10dip"/>
-->

    <ListView
        android:id="@+id/list_view"
        android:background="@drawable/paper"
        style="@style/Base.V11.Theme.AppCompat.Dialog"
        android:layout_width="325dp"
        android:layout_height="475dp"
        android:layout_marginBottom="16dp"
        android:cacheColorHint="@android:color/holo_orange_light"
...
