...
    android:layout_width="match_parent"
    android:background="@drawable/paper"
    android:layout_height="match_parent">


    <EditText
        android:id="@+id/edit_text_guess"
        android:layout_width="270sp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="48dp"
        android:inputType="textPersonName" />

    <!--        style="@style/Widget.AppCompat.Button.Colored"-->

    <Button
        android:id="@+id/btnOpen"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_below="@+id/edit_text_guess"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:background="@drawable/buttonshapeeasy"
        android:text="GO!"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="270dp"
...
